- added: /np /nq option - changed: Option name /g -> /nr, /l -> /nl, /se -> /ns - changed: Some log message - changed: Disabled SSE2 of vcxproj (for old cpu) - changed: MaximumTransferLength is limited to 64KB (can't read 128KB) - improved: Checking argument (check command-length) - improved: Subchannel ripping of SecuROM - fixed: Reading DirectoryRecord - fixed: Output unnecessary hash

--- a/DiscImageCreator/DiscImageCreator.vcxproj
+++ b/DiscImageCreator/DiscImageCreator.vcxproj
@@ -248,6 +248,7 @@
       <ForcedIncludeFiles>stdafx.h</ForcedIncludeFiles>
       <EnablePREfast>false</EnablePREfast>
       <ExceptionHandling>Sync</ExceptionHandling>
+      <EnableEnhancedInstructionSet>NoExtensions</EnableEnhancedInstructionSet>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
