*2017-07-02 - added: Reading TOC ATIP for CD-R, CD-RW - added: Reading path table, directory record for DVD - changed: Directory record size from 4096 to 8192 - changed: Some log message - changed: Sector Outputted to log to IsoBuster-like sector - fixed: Ripping range of SecuROM - fixed: Reading path table record - fixed: data sector is descrambled when sync and mode valid

--- a/DiscImageCreator/DiscImageCreator.vcxproj
+++ b/DiscImageCreator/DiscImageCreator.vcxproj
@@ -314,6 +314,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="struct.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="xml.h" />
     <ClInclude Include="_external\crc16ccitt.h" />
     <ClInclude Include="_external\crc32.h" />
     <ClInclude Include="_external\md5.h" />
@@ -347,6 +348,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release_ANSI|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="xml.cpp" />
     <ClCompile Include="_external\crc16ccitt.cpp" />
     <ClCompile Include="_external\crc32.cpp" />
     <ClCompile Include="_external\md5c.cpp" />
