2018-05-22 - added: swap command (This is for non-Plextor drive) - added: ls command (This shows maxium drive speed in command-line screen) - added: Support PS2 unlicensed disc (needs to use /sf. This protect looks like a safedisc) - added: GC/Wii dumping drive (support GCC-4160N, 4240N, 4243N, 4247N) - added: Check subQ adr and RtoW before dumping of GD-ROM - added: Check if PSX PAL or not (for /nl) - added: Output .dat file for BD-ROM - changed: Rereading the sector if crc16 of subQ is currupt, not rmsf or amsf - changed: Disable beep except disc dumping command (cd, dvd etc.) - fixed: Checking error of subQ track - fixed: Reading path table record of GD-ROM (support path table size is over 2352) - fixed: dumping CD-i ready (not unscramble the pregap sector)

--- a/DiscImageCreator/DiscImageCreator.vcxproj
+++ b/DiscImageCreator/DiscImageCreator.vcxproj
@@ -323,6 +323,7 @@
     <ClInclude Include="xml.h" />
     <ClInclude Include="_external\crc16ccitt.h" />
     <ClInclude Include="_external\crc32.h" />
+    <ClInclude Include="_external\global.h" />
     <ClInclude Include="_external\md5.h" />
     <ClInclude Include="_external\prngcd.h" />
     <ClInclude Include="_external\sha1.h" />
