Divided source code

--- a/DiscImageCreator/DiscImageCreator.vcxproj
+++ b/DiscImageCreator/DiscImageCreator.vcxproj
@@ -307,7 +307,9 @@
     <ClInclude Include="execIoctl.h" />
     <ClInclude Include="execScsiCmd.h" />
     <ClInclude Include="execScsiCmdforCD.h" />
+    <ClInclude Include="execScsiCmdforCDCheck.h" />
     <ClInclude Include="execScsiCmdforDVD.h" />
+    <ClInclude Include="execScsiCmdforFileSystem.h" />
     <ClInclude Include="forwardDeclaration.h" />
     <ClInclude Include="get.h" />
     <ClInclude Include="init.h" />
@@ -336,7 +338,9 @@
     <ClCompile Include="execIoctl.cpp" />
     <ClCompile Include="execScsiCmd.cpp" />
     <ClCompile Include="execScsiCmdforCD.cpp" />
+    <ClCompile Include="execScsiCmdforCDCheck.cpp" />
     <ClCompile Include="execScsiCmdforDVD.cpp" />
+    <ClCompile Include="execScsiCmdforFileSystem.cpp" />
     <ClCompile Include="get.cpp" />
     <ClCompile Include="init.cpp" />
     <ClCompile Include="output.cpp" />
