2018-06-14 - added: xbox command (support XGD2 of XBOX/XBOX 360) - added: PIC.bin for BD based disc - added: /74 option in swap command (for ring data of Sega Saturn) - added: SESSION syntax in cue file - changed: the way to get the timestamp - changed: permit to continue reading if the disc is CD-R or CD-RW and c2 errors are over 10000 - changed: Plextor drives support only latest firmware - fixed: /ms option (dumps leat-out of 1st session, lead-in of 2nd session and pregap of 1st track of 2nd session) - fixed: TOC of multi session disc - fixed: GetWriteOffset for ASUS - fixed: sub-qchannel reading - fixed: Reading directory record (incorrect data length of DVD)

--- a/DiscImageCreator/DiscImageCreator.vcxproj
+++ b/DiscImageCreator/DiscImageCreator.vcxproj
@@ -310,6 +310,7 @@
     <ClInclude Include="execScsiCmdforCDCheck.h" />
     <ClInclude Include="execScsiCmdforDVD.h" />
     <ClInclude Include="execScsiCmdforFileSystem.h" />
+    <ClInclude Include="fix.h" />
     <ClInclude Include="forwardDeclaration.h" />
     <ClInclude Include="get.h" />
     <ClInclude Include="init.h" />
@@ -341,6 +342,7 @@
     <ClCompile Include="execScsiCmdforCDCheck.cpp" />
     <ClCompile Include="execScsiCmdforDVD.cpp" />
     <ClCompile Include="execScsiCmdforFileSystem.cpp" />
+    <ClCompile Include="fix.cpp" />
     <ClCompile Include="get.cpp" />
     <ClCompile Include="init.cpp" />
     <ClCompile Include="output.cpp" />
