2018-06-18 - added: .dat for floppy - changed: the way to get the timestamp again - fixed: disc.txt for xbox (added total size of xbox disc, fixed #2 of security sector range) - fixed: misdetection of MCN before dumping - fixed: transfer length of DVD/BD

--- a/DiscImageCreator/DiscImageCreator.vcxproj
+++ b/DiscImageCreator/DiscImageCreator.vcxproj
@@ -264,6 +264,10 @@
       </AdditionalDependencies>
       <LinkTimeCodeGeneration>Default</LinkTimeCodeGeneration>
     </Link>
+    <PreBuildEvent>
+      <Command>CreateBuildDateTime.bat</Command>
+      <Message>CreateBuildDateTime.h</Message>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
