--- a/DiscImageCreator/DiscImageCreator.vcxproj
+++ b/DiscImageCreator/DiscImageCreator.vcxproj
@@ -328,11 +328,13 @@
     <ClInclude Include="struct.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="xml.h" />
+    <ClInclude Include="_external\abgx360.h" />
     <ClInclude Include="_external\crc16ccitt.h" />
     <ClInclude Include="_external\crc32.h" />
     <ClInclude Include="_external\global.h" />
     <ClInclude Include="_external\md5.h" />
     <ClInclude Include="_external\prngcd.h" />
+    <ClInclude Include="_external\rijndael-alg-fst.h" />
     <ClInclude Include="_external\sha1.h" />
   </ItemGroup>
   <ItemGroup>
@@ -366,10 +368,12 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release_ANSI|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="xml.cpp" />
+    <ClCompile Include="_external\abgx360.cpp" />
     <ClCompile Include="_external\crc16ccitt.cpp" />
     <ClCompile Include="_external\crc32.cpp" />
     <ClCompile Include="_external\md5c.cpp" />
     <ClCompile Include="_external\prngcd.cpp" />
+    <ClCompile Include="_external\rijndael-alg-fst.cpp" />
     <ClCompile Include="_external\sha1.cpp">
       <WarningLevel Condition="'$(Configuration)|$(Platform)'=='Release_ANSI|Win32'">EnableAllWarnings</WarningLevel>
     </ClCompile>
