--- a/DiscImageCreator/DiscImageCreator.vcxproj.filters
+++ b/DiscImageCreator/DiscImageCreator.vcxproj.filters
@@ -108,6 +108,12 @@
     <ClInclude Include="xml.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="_external\abgx360.h">
+      <Filter>_external</Filter>
+    </ClInclude>
+    <ClInclude Include="_external\rijndael-alg-fst.h">
+      <Filter>_external</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="_external\crc16ccitt.cpp">
@@ -187,6 +193,12 @@
     </ClCompile>
     <ClCompile Include="xml.cpp">
       <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="_external\abgx360.cpp">
+      <Filter>_external</Filter>
+    </ClCompile>
+    <ClCompile Include="_external\rijndael-alg-fst.cpp">
+      <Filter>_external</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
