--- a/DiscImageCreator/DiscImageCreator_linux.vcxproj
+++ b/DiscImageCreator/DiscImageCreator_linux.vcxproj
@@ -84,10 +84,12 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="_external\abgx360.cpp" />
     <ClCompile Include="_external\crc16ccitt.cpp" />
     <ClCompile Include="_external\crc32.cpp" />
     <ClCompile Include="_external\md5c.cpp" />
     <ClCompile Include="_external\prngcd.cpp" />
+    <ClCompile Include="_external\rijndael-alg-fst.cpp" />
     <ClCompile Include="_external\sha1.cpp" />
     <ClCompile Include="_linux\defineForLinux.cpp" />
   </ItemGroup>
@@ -118,11 +120,13 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="_external\abgx360.h" />
     <ClInclude Include="_external\crc16ccitt.h" />
     <ClInclude Include="_external\crc32.h" />
     <ClInclude Include="_external\global.h" />
     <ClInclude Include="_external\md5.h" />
     <ClInclude Include="_external\prngcd.h" />
+    <ClInclude Include="_external\rijndael-alg-fst.h" />
     <ClInclude Include="_external\sha1.h" />
     <ClInclude Include="_linux\defineForLinux.h" />
     <ClInclude Include="_linux\ntddcdrm.h" />
