2018-09-15 - added: support mode 0x00 of CD data track - changed: set to invalid mode except 0x00 or 0x01 or 0x02 - fixed: disc speed changing doesn't work for linux. - fixed: increased memory allocation for double pointer (subchannel, cd-text) - deleted: some warning when used Wextra

--- a/DiscImageCreator/DiscImageCreator_linux.vcxproj
+++ b/DiscImageCreator/DiscImageCreator_linux.vcxproj
@@ -138,6 +138,7 @@
       <ForcedIncludeFiles>_linux/defineForLinux.h</ForcedIncludeFiles>
       <CAdditionalWarning>extra;no-unknown-pragmas;%(CAdditionalWarning)</CAdditionalWarning>
       <CppAdditionalWarning>extra;no-unknown-pragmas;%(CppAdditionalWarning)</CppAdditionalWarning>
+      <Optimization>MaxSpeed</Optimization>
     </ClCompile>
     <PreBuildEvent>
       <Command>CreateBuildDateTime.bat</Command>
