--- a/DiscImageCreator/DiscImageCreator.vcxproj.filters
+++ b/DiscImageCreator/DiscImageCreator.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="_external">
       <UniqueIdentifier>{d35268ec-8112-4a08-91a9-0180ab5497ed}</UniqueIdentifier>
     </Filter>
+    <Filter Include="_external\mbedtls">
+      <UniqueIdentifier>{31e56d45-a47c-493b-8395-5a700e03c6a9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="_external\crc16ccitt.h">
@@ -114,6 +117,30 @@
     <ClInclude Include="_external\rijndael-alg-fst.h">
       <Filter>_external</Filter>
     </ClInclude>
+    <ClInclude Include="_external\mbedtls\aes.h">
+      <Filter>_external\mbedtls</Filter>
+    </ClInclude>
+    <ClInclude Include="_external\mbedtls\check_config.h">
+      <Filter>_external\mbedtls</Filter>
+    </ClInclude>
+    <ClInclude Include="_external\mbedtls\config.h">
+      <Filter>_external\mbedtls</Filter>
+    </ClInclude>
+    <ClInclude Include="_external\mbedtls\padlock.h">
+      <Filter>_external\mbedtls</Filter>
+    </ClInclude>
+    <ClInclude Include="_external\mbedtls\platform.h">
+      <Filter>_external\mbedtls</Filter>
+    </ClInclude>
+    <ClInclude Include="_external\mbedtls\platform_util.h">
+      <Filter>_external\mbedtls</Filter>
+    </ClInclude>
+    <ClInclude Include="_external\mbedtls\aesni.h">
+      <Filter>_external\mbedtls</Filter>
+    </ClInclude>
+    <ClInclude Include="_external\mbedtls\platform_time.h">
+      <Filter>_external\mbedtls</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="_external\crc16ccitt.cpp">
@@ -198,6 +225,12 @@
       <Filter>_external</Filter>
     </ClCompile>
     <ClCompile Include="_external\rijndael-alg-fst.cpp">
+      <Filter>_external</Filter>
+    </ClCompile>
+    <ClCompile Include="_external\aes.cpp">
+      <Filter>_external</Filter>
+    </ClCompile>
+    <ClCompile Include="_external\platform_util.cpp">
       <Filter>_external</Filter>
     </ClCompile>
   </ItemGroup>
