fixed linux build and enhanced gitignore
* now xml and tinyxml objects will be built when calling with make
* objects and resulting linux binary are now ignored by git

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@ ipch/
 DiscImageCreator.VC.*
 DiscImageCreator.vcxproj.user
 DiscImageCreator/buildDateTime.h
+
+# generated linux obj files
+DiscImageCreator/*.o
+DiscImageCreator/_external/*.o
+DiscImageCreator/_linux/*.o
+
+# linux binary
+DiscImageCreator/DiscImageCreator
