--- a/DiscImageCreator/makefile
+++ b/DiscImageCreator/makefile
@@ -44,6 +44,8 @@ SOURCES_CXX := \
   _external/prngcd.o \
   _external/rijndael-alg-fst.o \
   _external/sha1.o \
+  _external/tinyxml2.o \
+  xml.o \
   _linux/defineForLinux.o
 
 OBJECTS := $(SOURCES_C:.c=.o) $(SOURCES_CXX:.cpp=.o)
