--- a/DiscImageCreator/DiscImageCreator.vcxproj
+++ b/DiscImageCreator/DiscImageCreator.vcxproj
@@ -191,6 +191,12 @@
       <AdditionalDependencies>
       </AdditionalDependencies>
     </Link>
+    <PreBuildEvent>
+      <Command>CreateBuildDateTime.bat</Command>
+    </PreBuildEvent>
+    <PreBuildEvent>
+      <Message>CreateBuildDateTime.h</Message>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -219,6 +225,12 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>Advapi32.lib;shlwapi.lib</AdditionalDependencies>
     </Link>
+    <PreBuildEvent>
+      <Command>CreateBuildDateTime.bat</Command>
+    </PreBuildEvent>
+    <PreBuildEvent>
+      <Message>CreateBuildDateTime.h</Message>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
