- added: extract InterShield Cabinet File (ISc) to detect protection using i6comp.exe - added: output SecuROM DLL Header 4.87 (CA DD DD AC) to _VolDesc.txt - added: strcasestr for windows build

--- a/DiscImageCreator/DiscImageCreator.vcxproj.filters
+++ b/DiscImageCreator/DiscImageCreator.vcxproj.filters
@@ -144,6 +144,9 @@
     <ClInclude Include="outputFileSystem.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="_external\NonStandardFunction.h">
+      <Filter>_external</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="_external\crc16ccitt.cpp">
@@ -238,6 +241,9 @@
     </ClCompile>
     <ClCompile Include="outputFileSystem.cpp">
       <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="_external\NonStandardFunction.cpp">
+      <Filter>_external</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
